# BoostCopyFileRangeSample

app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
boost/: .gitignore  Android.mk  CMakeLists.txt
boost/boost/thread/detail/: config.hpp
boost/libs/locale/src/encoding/: wconv_codepage.ipp
gradle/wrapper/: gradle-wrapper.properties
